--- a/forms/MainWindow.ui
+++ b/forms/MainWindow.ui
@@ -17,10 +17,10 @@
    <widget class="QComboBox" name="comboBox3DObjects">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>80</y>
-      <width>231</width>
-      <height>28</height>
+      <x>820</x>
+      <y>50</y>
+      <width>251</width>
+      <height>31</height>
      </rect>
     </property>
     <item>
@@ -72,9 +72,9 @@
    <widget class="QPushButton" name="btnDraw">
     <property name="geometry">
      <rect>
-      <x>892</x>
-      <y>170</y>
-      <width>121</width>
+      <x>820</x>
+      <y>90</y>
+      <width>251</width>
       <height>29</height>
      </rect>
     </property>
@@ -85,9 +85,9 @@
    <widget class="QPushButton" name="btnChooseColor">
     <property name="geometry">
      <rect>
-      <x>890</x>
+      <x>820</x>
       <y>130</y>
-      <width>121</width>
+      <width>251</width>
       <height>29</height>
      </rect>
     </property>
@@ -98,8 +98,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>50</y>
+      <x>820</x>
+      <y>30</y>
       <width>141</width>
       <height>20</height>
      </rect>
@@ -108,21 +108,11 @@
      <string>Choose 3D Object</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="textBrowser_Scale">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>300</y>
-      <width>221</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>280</y>
+      <x>820</x>
+      <y>260</y>
       <width>101</width>
       <height>20</height>
      </rect>
@@ -131,116 +121,11 @@
      <string>Scale</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="textBrowser_Flip">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>360</y>
-      <width>221</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>340</y>
-      <width>101</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Flip</string>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="textBrowser_Rotate">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>420</y>
-      <width>221</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>400</y>
-      <width>101</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Rotate</string>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="textBrowser_xTranslate">
-    <property name="geometry">
-     <rect>
-      <x>880</x>
-      <y>490</y>
-      <width>51</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>460</y>
-      <width>101</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Translate</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>860</x>
-      <y>490</y>
-      <width>21</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>X</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>960</x>
-      <y>490</y>
-      <width>21</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Y</string>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="textBrowser_yTranslate">
-    <property name="geometry">
-     <rect>
-      <x>980</x>
-      <y>490</y>
-      <width>51</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>540</y>
+      <x>820</x>
+      <y>520</y>
       <width>101</width>
       <height>20</height>
      </rect>
@@ -249,27 +134,17 @@
      <string>Opacity</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="textBrowser_Opacity">
+   <widget class="QPushButton" name="btnUndo">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>560</y>
-      <width>221</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnReDraw">
-    <property name="geometry">
-     <rect>
-      <x>890</x>
-      <y>620</y>
+      <x>820</x>
+      <y>170</y>
       <width>121</width>
       <height>29</height>
      </rect>
     </property>
     <property name="text">
-     <string>Apply Changes</string>
+     <string>Undo Color</string>
     </property>
    </widget>
    <widget class="QVTKOpenGLNativeWidget" name="openGLWidget">
@@ -280,6 +155,235 @@
       <width>791</width>
       <height>661</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Scale">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>280</y>
+      <width>201</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Rotare">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>340</y>
+      <width>201</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>320</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Rotate</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>400</y>
+      <width>20</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>X</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Xtranslate">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>400</y>
+      <width>41</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>400</y>
+      <width>20</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Y</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Ytranslate">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>400</y>
+      <width>41</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Ztranslate">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>400</y>
+      <width>41</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>400</y>
+      <width>20</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Z</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnTranslate">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>440</y>
+      <width>251</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Translate</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Opacity">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>540</y>
+      <width>201</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnScale">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>280</y>
+      <width>41</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OK</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnRotate">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>340</y>
+      <width>41</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OK</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnOpacity">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>540</y>
+      <width>41</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OK</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnRedo">
+    <property name="geometry">
+     <rect>
+      <x>950</x>
+      <y>170</y>
+      <width>121</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Redo Color</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnDelete">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>210</y>
+      <width>251</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Delete Shape</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnFlip">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>480</y>
+      <width>251</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Flip Shape</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSave">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>650</y>
+      <width>121</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnLoad">
+    <property name="geometry">
+     <rect>
+      <x>950</x>
+      <y>650</y>
+      <width>121</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Load</string>
     </property>
    </widget>
   </widget>
